--- a/views/superadmin/updateUser.ejs
+++ b/views/superadmin/updateUser.ejs
@@ -38,58 +38,62 @@
             <div class="col">
                 <div class="alert alert-primary " role="alert">
                     <p>
-                        <h3>UPDATE Data User</h3>
+                        <h3>Update Data User</h3>
                         <a href="/dashboard">
                             << all User</a> </p> </div> </div> </div> <form>
                                 <div class="row mb-3">
-                                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                                    <label for="name" class="col-sm-2 col-form-label">Name</label>
                                     <div class="col-sm-6">
-                                        <input type="email" class="form-control" id="inputEmail3">
+                                        <input type="text" name="name" class="form-control" id="name">
                                     </div>
                                 </div>
                                 <div class="row mb-3">
-                                    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                                    <label for="email" class="col-sm-2 col-form-label">Email</label>
                                     <div class="col-sm-6">
-                                        <input type="password" class="form-control" id="inputPassword3">
+                                        <input type="email" class="form-control" id="email">
                                     </div>
                                 </div>
                                 <fieldset class="row mb-3">
-                                    <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
+                                    <legend class="col-form-label col-sm-2 pt-0">Gender</legend>
                                     <div class="col-sm-6">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="gridRadios"
-                                                id="gridRadios1" value="option1" checked>
-                                            <label class="form-check-label" for="gridRadios1">
-                                                First radio
+                                            <input class="form-check-input" type="radio" name="gender" id="radio-2"
+                                                value="Male">
+                                            <label class="form-check-label" for="radio-2">
+                                                Male
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="gridRadios"
-                                                id="gridRadios2" value="option2">
-                                            <label class="form-check-label" for="gridRadios2">
-                                                Second radio
+                                            <input class="form-check-input" type="radio" name="gender" id="radio-3"
+                                                value="Female">
+                                            <label class="form-check-label" for="radio-3">
+                                                Female
                                             </label>
                                         </div>
-                                        <div class="form-check disabled">
-                                            <input class="form-check-input" type="radio" name="gridRadios"
-                                                id="gridRadios3" value="option3" disabled>
-                                            <label class="form-check-label" for="gridRadios3">
-                                                Third disabled radio
-                                            </label>
-                                        </div>
+
                                     </div>
                                 </fieldset>
-                                <div class="row mb-3">
-                                    <div class="col-sm-10 offset-sm-2">
+                                <fieldset class="row mb-3">
+                                    <legend class="col-form-label col-sm-2 pt-0">Status</legend>
+                                    <div class="col-sm-6">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                            <label class="form-check-label" for="gridCheck1">
-                                                Example checkbox
+                                            <input class="form-check-input" type="radio" name="status" id="radio-4"
+                                                value="Active">
+                                            <label class="form-check-label" for="radio-4">
+                                                Active
                                             </label>
                                         </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="status" id="radio-5"
+                                                value="Inactive">
+                                            <label class="form-check-label" for="radio-5">
+                                                Inactive
+                                            </label>
+                                        </div>
+
                                     </div>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Sign in</button>
+                                </fieldset>
+                                <button type="submit" class="btn btn-primary">Save</button>
                                 </form>
                 </div>
                 <!-- Optional JavaScript; choose one of the two! -->
