--- a/views/superadmin/addUser.ejs
+++ b/views/superadmin/addUser.ejs
@@ -45,6 +45,7 @@
                                 <div class="row mb-3">
                                     <label for="name" class="col-sm-2 col-form-label">Name</label>
                                     <div class="col-sm-6">
+                                        <input type="hidden" name="id" value="">
                                         <input type="text" name="name" class="form-control" id="name">
                                     </div>
                                 </div>
@@ -94,7 +95,7 @@
 
                                     </div>
                                 </fieldset>
-                                <button type="submit" class="btn btn-primary">Save</button>
+                                <button type="submit" class="btn btn-primary update">Save</button>
                                 </form>
                 </div>
                 <!-- Optional JavaScript; choose one of the two! -->
@@ -108,7 +109,7 @@
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
                     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
                     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-                <script src="/js/index.js"></script>
+                <script src="js/index.js"></script>
                 <!-- Option 2: Separate Popper and Bootstrap JS -->
                 <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
