--- a/views/superadmin/addUser.ejs
+++ b/views/superadmin/addUser.ejs
@@ -75,6 +75,7 @@
 
                                     </div>
                                 </fieldset>
+
                                 <fieldset class="row mb-3">
                                     <legend class="col-form-label col-sm-2 pt-0">Status</legend>
                                     <div class="col-sm-6">
@@ -93,6 +94,46 @@
                                             </label>
                                         </div>
 
+                                    </div>
+                                </fieldset>
+
+                                <div class="row mb-3">
+                                    <label for="username" class="col-sm-2 col-form-label">Username</label>
+                                    <div class="col-sm-6">
+                                        <input type="text" name="username" class="form-control" id="username">
+                                    </div>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <label for="password" class="col-sm-2 col-form-label">Password</label>
+                                    <div class="col-sm-6">
+                                        <input type="password" name="password" class="form-control" id="password">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <label for="gamehistory" class="col-sm-2 col-form-label">Game History</label>
+                                    <div class="col-sm-6">
+                                        <input type="number" name="gamehistory" class="form-control" id="gamehistory">
+                                    </div>
+                                </div>
+
+                                <fieldset class="row mb-3">
+                                    <legend class="col-form-label col-sm-2 pt-0">Status Win</legend>
+                                    <div class="col-sm-6">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="statuswin" id="radio-6"
+                                                value="Win">
+                                            <label class="form-check-label" for="radio-6">
+                                                Win
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="statuswin" id="radio-7"
+                                                value="Lose">
+                                            <label class="form-check-label" for="radio-7">
+                                                Lose
+                                            </label>
+                                        </div>
                                     </div>
                                 </fieldset>
                                 <button type="submit" class="btn btn-primary update">Save</button>
