--- a/views/superadmin/dashboard.ejs
+++ b/views/superadmin/dashboard.ejs
@@ -23,6 +23,9 @@
                         <a class="navbar-brand" href="#">
                             DASHBOARD
                         </a>
+                        <a class="navbar-brand" href="/">
+                            LOGOUT
+                        </a>
                     </div>
                 </nav>
             </div>
