--- a/views/main.ejs
+++ b/views/main.ejs
@@ -44,9 +44,9 @@
 
                     </ul>
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="/">SIGN UP</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="/login">LOGIN</a>
                         </li>
