--- a/views/superadmin/updateUser.ejs
+++ b/views/superadmin/updateUser.ejs
@@ -30,6 +30,9 @@
                         <a class="navbar-brand" href="#">
                             DASHBOARD
                         </a>
+                        <a class="navbar-brand" href="/">
+                            LOGOUT
+                        </a>
                     </div>
                 </nav>
             </div>
